--- a/package.json
+++ b/package.json
@@ -15,48 +15,50 @@
     "up": "taze major -I"
   },
   "dependencies": {
-    "@unocss/reset": "^0.45.21",
-    "@vueuse/core": "^9.2.0",
-    "@vueuse/head": "^0.7.10",
+    "@unocss/reset": "^0.45.26",
+    "@vueuse/core": "^9.3.0",
+    "@vueuse/head": "^0.7.12",
+    "gray-matter": "^4.0.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.22",
-    "vue": "^3.2.39",
+    "vue": "^3.2.40",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-starport": "^0.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.26.3",
-    "@iconify-json/carbon": "^1.1.7",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.1",
+    "@antfu/eslint-config": "^0.27.0",
+    "@iconify-json/carbon": "^1.1.8",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.1.0",
-    "@vue/test-utils": "^2.0.2",
+    "@vue/test-utils": "^2.1.0",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "cypress": "^10.7.0",
-    "eslint": "^8.23.1",
+    "cypress": "^10.9.0",
+    "eslint": "^8.24.0",
     "eslint-plugin-cypress": "^2.12.1",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.5.1",
-    "pnpm": "^7.11.0",
+    "pnpm": "^7.12.2",
     "shiki": "^0.11.1",
-    "taze": "^0.8.0",
-    "typescript": "^4.8.3",
-    "unocss": "^0.45.21",
+    "taze": "^0.8.2",
+    "typescript": "^4.8.4",
+    "unocss": "^0.45.26",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
-    "vite": "^3.1.0",
-    "vite-plugin-inspect": "^0.7.1",
+    "vite": "^3.1.4",
+    "vite-plugin-inspect": "^0.7.4",
     "vite-plugin-pages": "^0.26.0",
-    "vite-plugin-pwa": "^0.12.7",
+    "vite-plugin-pwa": "^0.13.1",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-vue-markdown": "^0.22.1",
     "vite-ssg": "^0.20.2",
-    "vite-ssg-sitemap": "^0.4.1",
-    "vitest": "^0.23.2",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.23.4",
     "vue-tsc": "^0.40.13"
   }
 }
